fix display of whitespace

--- a/docs/style.css
+++ b/docs/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #202020;
 }
 
-h1, p {
+h1, p, pre {
     color: #ffffff;
 }
 
